# flex_model

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  install_pips.sh  pairwise_concordance.md  pyproject.toml
.github/instructions/: python-code.instructions.md
flexModel/: __init__.py  aligned_flex_module.py  alignment_bottleneck.py  conv_gadconv.py  conv_gatedGraphConv.py  conv_reaReaConv.py  flex_gnn.py  flex_gnn_v2.py  flex_module.py  halfSpaceAntiSymmetric.py  pairwise_concordance.py  utils.py
misc/: compare_spearmans.py  diff_spearman.py
tests/: factories.py  test_aligned_flex_module.py  test_antisymmetric.py  test_conv_reaReaConv.py  test_flex_model.py  test_install.py  test_pairwise_concordance.py  test_training.py  test_training_pairwise.py  test_training_trainer.py
